<resources>
    <string name="app_name">Ex09</string>
    <string name="combustivel_gasolina">Gasolina</string>
    <string name="novo_veiculo">Novo</string>
    <string name="combustivel_etanol">Etanol</string>
    <string name="ano">Ano</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="titulo_incluir">Incluir Veículo</string>
    <string name="dica">Modelo</string>
    <string name="ano_fabricacao">Ano de Fabricação</string>
</resources>
