
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_incluir"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textH1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:tooltipText="Digite seu nome."
        android:id="@+id/edtModelo"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ckbGasolina"
        android:text="@string/combustivel_gasolina"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ckbEtanol"
        android:text="@string/combustivel_etanol"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano_fabricacao"/>
    <EditText
        android:layout_width="@dimen/textAno"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edtAno"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbOpcao1"
            android:text="Novo"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbOpcao2"
            android:text="Usado"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar"
        android:drawableStart="@drawable/carro"
        android:id="@+id/btnEnviar"
        android:onClick="btnEnviarPressionado"/>
</LinearLayout>
